# Pico-Green-Clock

./: CMakeLists.txt  CalendarEventsGeneric.cpp  Credentials.cpp  LightDutyCycleComputation.xlsx  Pico-Green-Clock.c  README.md  README.md.bak  adjust_clock_brightness.c  configuration.h  pico-green-clock.h  picow_ntp_client.c  typedefs.h
